# shaka-mcp

./: .env  README.md  config.py  gnews.py  main.py  pyproject.toml  render.yaml  test.html
tests/: test_gnews_tools.py
